logs/validate.20260408-032650.log
Mode: isolate
Isolate: including Chap38 Chap37 Chap41 Chap18 Chap19 Chap23 Chap02 Chap53
error: unexpected token, expected `;`
   --> src/Chap53/PQMinStEph.rs:624:21
    |
624 |                     implies vertex_universe.contains(e.1) by {
    |                     ^^^^^^^

error[E0425]: cannot find type `PQMinResult` in this scope
   --> src/Chap53/PQMinStEph.rs:675:84
    |
675 |     impl<V: StT + Ord + TotalOrder, P: StT + Ord + TotalOrder> std::fmt::Debug for PQMinResult<V, P> {
    |                                                                                    ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 24 +     use crate::Chap53::PQMinStPer::PQMinStPer::PQMinResult;
    |

error[E0425]: cannot find type `PQMinResult` in this scope
   --> src/Chap53/PQMinStEph.rs:685:86
    |
685 |     impl<V: StT + Ord + TotalOrder, P: StT + Ord + TotalOrder> std::fmt::Display for PQMinResult<V, P> {
    |                                                                                      ^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 24 +     use crate::Chap53::PQMinStPer::PQMinStPer::PQMinResult;
    |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 6s
Sampled Memory Usage: peak rust_verify RSS: 3324MB, peak z3 RSS: 223MB, min free: 23312MB
Sampled CPU Usage: rust_verify: 56s, z3 children: 53s
